[package]
name = "token_adalt"
version = "0.1.0"
authors = ["Hemanth Kapila <kapilash@outlook.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10.30"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"