[package]
name = "token_adalt"
version = "0.5.0"
authors = ["Hemanth Kapila <kapilash@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust library that enables you to acquire security token from Azure Active Directory."
repository = "https://github.com/kapilash/token_adalt/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10.62"
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
